--- a/static/main.css
+++ b/static/main.css
@@ -55,7 +55,7 @@ nav ul li a {
 }
 
 .hero {
-    background: url('/static/VK\\(17\).JPG')') center/cover no-repeat;
+    background: url('/static/vk side dark.JPG') center/cover no-repeat;
     height: 900px;
     display: flex;
     align-items: center;
